Switch Mail Handling to Spring Integration Mail
remove org.springframework.ws.transport classes

common pom.xml: javax.mail -> 1.4.5

core pom.xml: add spring-integration-mail and spring-integration-file

TransactionDao: add findByDescriptionAndMaxDate

applicationContext-server.xml: redo mail section

ReconciliationServices: update signature of method reconcile

ZipUtil: add unzip based on byte[]

add class in com.algoTrader.util.mail

git-svn-id: https://repo.algotrader.ch/svn/trunk/AlgoTrader@5441 19eef36c-86f0-de11-afab-0004ac968479